tests/scan/fixtures/validation/negative/clean_go_clean-graceful-shutdown/go.mod
module github.com/example/clean-graceful-shutdown
go 1.21
